[package]
name = "shorten"
version = "0.1.5"
authors = ["Kağan Kayal"]
description = "A collection of convenience functions, macros and traits to shorten repetitive code."
homepage = "https://github.com/kkayal/shorten"
repository = "https://github.com/kkayal/shorten"
readme = "README.md"
keywords = ["macros", "functions", "traits"]
categories = ["development-tools"]
license = "MIT"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
